; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_reflog.c_find_cfg_ent.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_reflog.c_find_cfg_ent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reflog_expire_cfg = type { i8*, %struct.reflog_expire_cfg* }

@reflog_expire_cfg_tail = common dso_local global %struct.reflog_expire_cfg** null, align 8
@reflog_expire_cfg = common dso_local global %struct.reflog_expire_cfg* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.reflog_expire_cfg* (i8*, i64)* @find_cfg_ent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.reflog_expire_cfg* @find_cfg_ent(i8* %0, i64 %1) #0 {
  %3 = alloca %struct.reflog_expire_cfg*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.reflog_expire_cfg*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.reflog_expire_cfg**, %struct.reflog_expire_cfg*** @reflog_expire_cfg_tail, align 8
  %8 = icmp ne %struct.reflog_expire_cfg** %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store %struct.reflog_expire_cfg** @reflog_expire_cfg, %struct.reflog_expire_cfg*** @reflog_expire_cfg_tail, align 8
  br label %10

10:                                               ; preds = %9, %2
  %11 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** @reflog_expire_cfg, align 8
  store %struct.reflog_expire_cfg* %11, %struct.reflog_expire_cfg** %6, align 8
  br label %12

12:                                               ; preds = %35, %10
  %13 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** %6, align 8
  %14 = icmp ne %struct.reflog_expire_cfg* %13, null
  br i1 %14, label %15, label %39

15:                                               ; preds = %12
  %16 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** %6, align 8
  %17 = getelementptr inbounds %struct.reflog_expire_cfg, %struct.reflog_expire_cfg* %16, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = load i64, i64* %5, align 8
  %21 = call i32 @strncmp(i8* %18, i8* %19, i64 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %34, label %23

23:                                               ; preds = %15
  %24 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** %6, align 8
  %25 = getelementptr inbounds %struct.reflog_expire_cfg, %struct.reflog_expire_cfg* %24, i32 0, i32 0
  %26 = load i8*, i8** %25, align 8
  %27 = load i64, i64* %5, align 8
  %28 = getelementptr inbounds i8, i8* %26, i64 %27
  %29 = load i8, i8* %28, align 1
  %30 = sext i8 %29 to i32
  %31 = icmp eq i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %23
  %33 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** %6, align 8
  store %struct.reflog_expire_cfg* %33, %struct.reflog_expire_cfg** %3, align 8
  br label %50

34:                                               ; preds = %23, %15
  br label %35

35:                                               ; preds = %34
  %36 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** %6, align 8
  %37 = getelementptr inbounds %struct.reflog_expire_cfg, %struct.reflog_expire_cfg* %36, i32 0, i32 1
  %38 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** %37, align 8
  store %struct.reflog_expire_cfg* %38, %struct.reflog_expire_cfg** %6, align 8
  br label %12

39:                                               ; preds = %12
  %40 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** %6, align 8
  %41 = load i8*, i8** %4, align 8
  %42 = load i8*, i8** %4, align 8
  %43 = load i64, i64* %5, align 8
  %44 = call i32 @FLEX_ALLOC_MEM(%struct.reflog_expire_cfg* %40, i8* %41, i8* %42, i64 %43)
  %45 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** %6, align 8
  %46 = load %struct.reflog_expire_cfg**, %struct.reflog_expire_cfg*** @reflog_expire_cfg_tail, align 8
  store %struct.reflog_expire_cfg* %45, %struct.reflog_expire_cfg** %46, align 8
  %47 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** %6, align 8
  %48 = getelementptr inbounds %struct.reflog_expire_cfg, %struct.reflog_expire_cfg* %47, i32 0, i32 1
  store %struct.reflog_expire_cfg** %48, %struct.reflog_expire_cfg*** @reflog_expire_cfg_tail, align 8
  %49 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** %6, align 8
  store %struct.reflog_expire_cfg* %49, %struct.reflog_expire_cfg** %3, align 8
  br label %50

50:                                               ; preds = %39, %32
  %51 = load %struct.reflog_expire_cfg*, %struct.reflog_expire_cfg** %3, align 8
  ret %struct.reflog_expire_cfg* %51
}

declare dso_local i32 @strncmp(i8*, i8*, i64) #1

declare dso_local i32 @FLEX_ALLOC_MEM(%struct.reflog_expire_cfg*, i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
